Fix podcast cramped descriptions

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -529,6 +529,9 @@ a {
  font-size:var(--std-font-size)!important;
  font-weight:200!important;
  min-height:var(--list-elem-height)!important;
+ height:auto!important;
+ padding-top:8px!important;
+ padding-bottom:8px!important;
 }
 
 .browse-text img, .np-info-text img, .np-info-text-desktop img, .np-info-text-full img, .np-info-text-full-desktop img, .inline-image {
